# ArrangementS

./: .env.example  .gitignore  AGENTS.md  README.md  agent.md  package.json  pnpm-lock.yaml  会议场地排班系统_Fable5验收清单.yaml  会议场地排班系统_完整实施方案.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py  cookies.py  crypto.py  deps.py  pinyin.py  ratelimit.py  security.py
apps/api/app/db/: base.py  init_data.py  make_person_template.py  session.py
apps/api/app/models/: __init__.py  audit.py  availability.py  config.py  constraint.py  enums.py  import_batch.py  leave.py  multiplier.py  overtime.py  person.py  schedule.py  semester.py  special_date.py  statistics.py  swap.py  timetable.py  user.py  vacation.py  venue.py  venue_task.py
apps/api/app/scheduling/: eligibility.py  slots.py  solver.py
apps/api/app/schemas/: admin.py  auth.py  manual_slot.py  overtime.py  people.py  schedule.py  semester.py  timetable.py  vacation.py  venue.py  (+1 more)
apps/api/migrations/: env.py
apps/api/tests/: conftest.py  test_auth.py  test_config_rules.py  test_draft.py  test_hours.py  test_intervals.py  test_manual_scheduling.py  test_me.py  test_pdf_extractor.py  test_people_api.py  test_people_import.py  test_person_constraint.py  test_schedule_api.py  test_schedule_pipeline.py  test_semester.py  test_solver.py  test_statistics.py  test_tasks_runner.py  test_timetable.py  test_timetable_api.py  test_timetable_upload_pdf_api.py  test_vacation.py  test_venue_api.py  test_venue_task.py  test_week_parser.py  test_workflow.py
(+117 files in other folders)
