[project]
name = "meeting-scheduler-api"
version = "0.1.0"
description = "党政办公室会议场地排班系统 - 后端 API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "python-multipart>=0.0.12",
    "redis>=5.2",
    "cryptography>=44.0",
    "pypinyin>=0.53",
    "openpyxl>=3.1",
    "python-dateutil>=2.9",
    "ortools>=9.11",
    "apscheduler>=3.10",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E702", "E741", "E731"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
